--- a/index.html
+++ b/index.html
@@ -2,11 +2,67 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Дизайн студия Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="http://placehold.it/150x100" width="150" height="50" alt="Логотип Нердс">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="studio.html">Студия</li>
+          <li><a href="customers.html">Клиенты</li>
+          <li><a href="catalog.html">Магазин</li>
+          <li><a href="contacts.html">Контакты</li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="basket">Корзина</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="visually-hidden">Дизайн студия Нёрдс</h1>
+      <section class="features">
+        <h2 class="visually-hidden">Наши продукты</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <a class="features-header-logo-site">
+              <img src="http://placehold.it/150x100" width="50" height="20" alt="Логотип Сайт">
+            </a>
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как вы увидете наш сайт!</p>
+          </li>
+          <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
+          <li class="features-item">
+            <a class="features-header-logo-app">
+              <img src="http://placehold.it/150x100" width="50" height="20" alt="Логотип Приложения">
+            </a>
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          </li>
+          <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
+          <li class="features-item">
+            <a class="features-header-logo-presentation">
+              <img src="http://placehold.it/150x100" width="50" height="20" alt="Логотип Презентация">
+            </a>
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете,насколько вы изумительны!</p>
+          </li>
+          <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
+        </ul>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <div class="footer-social">
+        <b>Давайте дружить,это выгодно!</b>
+        <p> Скидка 10% для друзей из социальных сетей</p><br>
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
