--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,11 @@
           <img src="http://placehold.it/150x100" width="150" height="50" alt="Логотип Нердс">
         </a>
         <ul class="site-navigation">
-          <li><a href="stydio.html">Студия</li>
-          <li><a href="customers.html">Клиенты</li>
-          <li class="site-navigation-current"><a href="catalog.html">Магазин</li>
-          <li><a href="contacts.html">Контакты</li>
-        </ul>
-        <ul class="user-navigation">
-          <li class="basket">Корзина</li>
+          <li><a href="stydio.html">Студия</a></li>
+          <li><a href="customers.html">Клиенты</a></li>
+          <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="basket.html">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -32,32 +30,44 @@
         <ul class="catalog-list">
           <li class="catalog-item">
             <h3>
-              <a href="catalog-item.html">SENODA</a>
+              <a href="catalog-item.html">
+                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт SENODA">SENODA
+              </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
-              <a href="catalog-item.html">PINK</a>
+              <a href="catalog-item.html">
+                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт PINK">PINK
+              </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
-              <a href="catalog-item.html">BORODINSKI</a>
+              <a href="catalog-item.html">
+                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт BORODINSKI">BORODINSKI
+              </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
-              <a href="catalog-item.html">MISHKA</a>
+              <a href="catalog-item.html">
+                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт MISHKA">MISHKA
+              </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
-              <a href="catalog-item.html">A+</a>
+              <a href="catalog-item.html">
+                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт A+">A+
+              </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
-              <a href="catalog-item.html">KBACT</a>
+              <a href="catalog-item.html">
+                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт КВАСТ">KBACT
+              </a>
             </h3>
           </li>
         </ul>
@@ -68,9 +78,9 @@
         <b>Давайте дружить,это выгодно!</b>
         <p> Скидка 10% для друзей из социальных сетей</p><br>
         <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#" class="visually-hidden">Вконтакте</a></li>
+          <li><a class="social-button" href="#" class="visually-hidden">Фейсбук</a></li>
+          <li><a class="social-button" href="#" class="visually-hidden">Инстаграм</a></li>
         </ul>
       </div>
     </footer>
