--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
           <img src="http://placehold.it/150x100" width="150" height="50" alt="Логотип Нердс">
         </a>
         <ul class="site-navigation">
-          <li><a href="studio.html">Студия</li>
-          <li><a href="customers.html">Клиенты</li>
-          <li><a href="catalog.html">Магазин</li>
-          <li><a href="contacts.html">Контакты</li>
-        </ul>
-        <ul class="user-navigation">
-          <li class="basket">Корзина</li>
+          <li><a href="studio.html">Студия</a></li>
+          <li><a href="customers.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="basket.html">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -58,9 +56,9 @@
         <b>Давайте дружить,это выгодно!</b>
         <p> Скидка 10% для друзей из социальных сетей</p><br>
         <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#" class="visually-hidden">Вконтакте</a></li>
+          <li><a class="social-button" href="#" class="visually-hidden">Фейсбук</a></li>
+          <li><a class="social-button" href="#" class="visually-hidden">Инстаграм</a></li>
         </ul>
       </div>
     </footer>
