--- a/catalog.html
+++ b/catalog.html
@@ -78,9 +78,9 @@
         <b>Давайте дружить,это выгодно!</b>
         <p> Скидка 10% для друзей из социальных сетей</p><br>
         <ul>
-          <li><a class="social-button" href="#" class="visually-hidden">Вконтакте</a></li>
-          <li><a class="social-button" href="#" class="visually-hidden">Фейсбук</a></li>
-          <li><a class="social-button" href="#" class="visually-hidden">Инстаграм</a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
         </ul>
       </div>
     </footer>
