--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <b>Давайте дружить,это выгодно!</b>
         <p> Скидка 10% для друзей из социальных сетей</p><br>
         <ul>
-          <li><a class="social-button" href="#" class="visually-hidden">Вконтакте</a></li>
-          <li><a class="social-button" href="#" class="visually-hidden">Фейсбук</a></li>
-          <li><a class="social-button" href="#" class="visually-hidden">Инстаграм</a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden"></span>Вконтакте</a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden"></span>Фейсбук</a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden"></span>Инстаграм</a></li>
         </ul>
       </div>
     </footer>
