--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="http://placehold.it/150x100" width="150" height="50" alt="Логотип Нердс">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нердс">
         </a>
         <ul class="site-navigation">
           <li><a href="stydio.html">Студия</a></li>
@@ -31,42 +31,42 @@
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт SENODA">SENODA
+                <img src="img/sedona.png" width="360" height="576" alt="сайт SENODA">SENODA
               </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт PINK">PINK
+                <img src="img/pink.png" width="360" height="576" alt="сайт PINK">PINK
               </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт BORODINSKI">BORODINSKI
+                <img src="img/borodinski.png" width="360" height="576" alt="сайт BORODINSKI">BORODINSKI
               </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт MISHKA">MISHKA
+                <img src="img/mishka.png" width="360" height="576" alt="сайт MISHKA">MISHKA
               </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт A+">A+
+                <img src="img/aplus.png" width="360" height="576" alt="сайт A+">A+
               </a>
             </h3>
           </li>
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-                <img src="http://placehold.it/150x100" width="50" height="20" alt="сайт КВАСТ">KBACT
+                <img src="img/kvast.png" width="360" height="576" alt="сайт КВАСТ">KBACT
               </a>
             </h3>
           </li>
