--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="http://placehold.it/150x100" width="150" height="50" alt="Логотип Нердс">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нердс">
         </a>
         <ul class="site-navigation">
           <li><a href="studio.html">Студия</a></li>
@@ -26,7 +26,7 @@
         <ul class="features-list">
           <li class="features-item">
             <a class="features-header-logo-site">
-              <img src="http://placehold.it/150x100" width="50" height="20" alt="Логотип Сайт">
+              <img src="img/logo-site.png" width="300" height="146" alt="Логотип Сайт">
             </a>
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как вы увидете наш сайт!</p>
@@ -34,7 +34,7 @@
           <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
           <li class="features-item">
             <a class="features-header-logo-app">
-              <img src="http://placehold.it/150x100" width="50" height="20" alt="Логотип Приложения">
+              <img src="img/logo-app.png" width="300" height="146" alt="Логотип Приложения">
             </a>
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
@@ -42,7 +42,7 @@
           <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
           <li class="features-item">
             <a class="features-header-logo-presentation">
-              <img src="http://placehold.it/150x100" width="50" height="20" alt="Логотип Презентация">
+              <img src="img/logo-presentation.png" width="300" height="146" alt="Логотип Презентация">
             </a>
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете,насколько вы изумительны!</p>
