--- a/index.html
+++ b/index.html
@@ -50,15 +50,34 @@
           <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
         </ul>
       </section>
+      <section class="contacts">
+        <h2>Напишите нам</h2>
+        <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
+          <p class="contacts-item">
+            <label for="contacts-name">Ваше Имя:</label>
+            <input id="contacts-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+          </p>
+          <p class="contacts-item">
+            <label for="contacts-email">Ваш e-mail:</label>
+            <input id="contacts-email"type="text" name="email" value="" placeholder="email@example.com">
+          </p>
+          <p class="contacts-item">
+            <label for="contacts-textletter">Текст письма:</label>
+            <input id="contacts-textletter" type="text" name="textletter" value="" placeholder="В свободной форме">
+          </p>
+          <button class="button" type="submit">Отправить</button>
+        </form>
+        <button class="modal-close" type="button">Закрыть</button>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="footer-social">
         <b>Давайте дружить,это выгодно!</b>
         <p> Скидка 10% для друзей из социальных сетей</p><br>
         <ul>
-          <li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-          <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-          <li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс во Вконтакте</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Фейсбуке</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Инстаграм</span></a></li>
         </ul>
       </div>
     </footer>
