--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Дизайн студия Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -21,6 +24,8 @@
     </header>
     <main class="container">
       <h1 class="visually-hidden">Дизайн студия Нёрдс</h1>
+
+      <div class="index-columns">
       <section class="features">
         <h2 class="visually-hidden">Наши продукты</h2>
         <ul class="features-list">
@@ -31,7 +36,7 @@
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как вы увидете наш сайт!</p>
           </li>
-          <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
+          <a class="button--red" href="to order.html">ЗАКАЗАТЬ</a>
           <li class="features-item">
             <a class="features-header-logo-app">
               <img src="img/logo-app.png" width="300" height="146" alt="Логотип Приложения">
@@ -39,7 +44,7 @@
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           </li>
-          <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
+          <a class="button--green" href="to order.html">ЗАКАЗАТЬ</a>
           <li class="features-item">
             <a class="features-header-logo-presentation">
               <img src="img/logo-presentation.png" width="300" height="146" alt="Логотип Презентация">
@@ -47,9 +52,10 @@
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете,насколько вы изумительны!</p>
           </li>
-          <a class="button" href="to order.html">ЗАКАЗАТЬ</a>
+          <a class="button--yellow" href="to order.html">ЗАКАЗАТЬ</a>
         </ul>
       </section>
+    </div>
       <section class="contacts">
         <h2>Напишите нам</h2>
         <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
