--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -66,7 +69,7 @@
             </li>
           </ul>
         </fieldset>
-        <button type="submit" class="filter-button button">
+        <button type="submit" class="filter-button-button">
             ПОКАЗАТЬ
         </button>
       </form>
