--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Нёрдс: Каталог</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -90,8 +90,8 @@
                 <img src="img/sedona.png" width="360" height="576" alt="сайт SENODA">
               </a>
                 <div class="catalog-list-window">
-                  <h4>Sedona</h4>
-                    <p>Информационный сайт для туристов</p>
+                  <h4>SEDONA</h4>
+                    <p>Информационный сайт <br>для туристов</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
@@ -100,8 +100,8 @@
                 <img src="img/pink.png" width="360" height="576" alt="сайт PINK">
               </a>
                 <div class="catalog-list-window">
-                  <h4>Pink APP</h4>
-                    <p>Продуктовый лендинг приложения для iOS и Android</p>
+                  <h4>PINK APP</h4>
+                    <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
@@ -110,8 +110,8 @@
                 <img src="img/borodinski.png" width="360" height="576" alt="сайт BORODINSKI">
               </a>
               <div class="catalog-list-window">
-                <h4>Barbershop</h4>
-                  <p>Сайт салона красоты. Для мужчин, да.</p>
+                <h4>BARBERSHOP</h4>
+                  <p>Сайт салона красоты.<br> Для мужчин, да.</p>
                     <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
@@ -120,8 +120,8 @@
                 <img src="img/mishka.png" width="360" height="576" alt="сайт MISHKA">
               </a>
                 <div class="catalog-list-window">
-                  <h4>Mishka</h4>
-                    <p>Интернет-магазин вязаных игрушек</p>
+                  <h4>MISHKA</h4>
+                    <p>Интернет-магазин<br> вязаных игрушек</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
@@ -130,8 +130,8 @@
                 <img src="img/aplus.png" width="360" height="576" alt="сайт A+">
               </a>
               <div class="catalog-list-window">
-                <h4>A+</h4>
-                  <p>Лендинг курсов повышения квалификации</p>
+                <h4>A PLUS</h4>
+                  <p>Лендинг курсов повышения<br> квалификации</p>
                     <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
               </div>
           </li>
@@ -141,7 +141,7 @@
               </a>
                 <div class="catalog-list-window">
                   <h4>КВАСТ</h4>
-                    <p>Промо-сайт производителя крафтового кваса</p>
+                    <p>Промо-сайт производителя<br> крафтового кваса</p>
                       <a class="button catalog-list-button" href="#">9 900 РУБ.</a>
                 </div>
           </li>
@@ -150,30 +150,43 @@
       </div>
       </section>
       <section class="contacts">
+      <div class="contacts-title">
         <h2>Напишите нам</h2>
+        <svg class="modal-cross" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FB565A" d="M13.328 10.5l7.371-7.371a1.003 1.003 0 0 0 0-1.414L19.285.3a1.003 1.003 0 0 0-1.414 0L10.5 7.672 3.129.301a1.003 1.003 0 0 0-1.414 0L.301 1.715a1.003 1.003 0 0 0 0 1.414L7.672 10.5.301 17.871a1.003 1.003 0 0 0 0 1.414l1.415 1.414a1.003 1.003 0 0 0 1.414 0l7.371-7.371 7.371 7.371a1.003 1.003 0 0 0 1.414 0l1.414-1.414a1.003 1.003 0 0 0 0-1.414L13.328 10.5z"/></svg>
+      </div>
         <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="contacts-user">
           <p class="contacts-item">
             <label for="contacts-name">Ваше Имя:</label>
-            <input id="contacts-name" type="text" name="name" value="" placeholder="Имя Фамилия">
+            <input id="contacts-name" type="text" name="name" placeholder="Имя Фамилия">
           </p>
           <p class="contacts-item">
             <label for="contacts-email">Ваш e-mail:</label>
-            <input id="contacts-email" type="text" name="email" value="" placeholder="email@example.com">
+            <input id="contacts-email" type="text" name="email" placeholder="email@example.com">
           </p>
+        </div>
           <p class="contacts-item">
             <label for="contacts-textletter">Текст письма:</label>
-            <input id="contacts-textletter" type="text" name="textletter" value="" placeholder="В свободной форме">
+            <textarea class="contacts-user-text" id="contacts-textletter" name="textletter" cols="100%" rows="5" placeholder="В свободной форме"></textarea>
           </p>
-          <button class="button" type="submit">Отправить</button>
+          <button class="button" type="submit">ОТПРАВИТЬ</button>
         </form>
-        <button class="modal-close" type="button">Закрыть</button>
+
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer container">
       <ul class="social-list">
-        <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс во Вконтакте</span></a></li>
-        <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Фейсбуке</span></a></li>
-        <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Инстаграм</span></a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс во Вконтакте</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+            <path fill=#ffffff d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/>
+          </path>
+          </svg></a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Фейсбуке</span><svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+    <path fill=#ffffff d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
+      </svg></a></li>
+        <li><a class="social-button" href="#"><span class="visually-hidden">Студия Нердс в Инстаграм</span><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+    <path fill=#ffffff d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/>
+    </svg></a></li>
       </ul>
       <div class="footer-social">
         <p class="footer-friendship"><strong class="footer-bold">Давайте дружить, это выгодно!</strong></p>
